[package]
name = "caesium-raster"
version = "0.1.0"
edition = "2021"

authors = [
    "Liam R. (zCubed3) <zcubedtres@gmail.com>"
]

license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rgml = { path = "deps/rgml", features = ["serialization"] }

image = { version = "0.24.4", default-features = false, features = ["png", "gif"] }

serde = { version = "1.0.147", features = ["derive"] }
serde_arrays = { version = "0.1.0" }
bincode = { version = "1.3.3" }

tracing = { version = "0.1.37", optional = true }
tracing-tracy = { version = "0.10.4", optional = true }
tracing-subscriber = { version = "0.3.17", optional = true }

rand = "0.8.5"

[features]
tracy = ["dep:tracing", "dep:tracing-tracy", "dep:tracing-subscriber"]
default = ["tracy"]